[package]
name = "superview"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.0"
snafu = "0.5.0"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
tempfile = "3.1.0"
